src/index.css
.flex-row {
    display: flex;
    flex-wrap: wrap;
}

.mx-1 {
  margin-right: var(--spacing-one);
  margin-left: var(--spacing-one);
}
  
.mx-2 {
  margin-right: var(--spacing-two);
  margin-left: var(--spacing-two);
}

:root {
  --main-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
  sans-serif;
  --light-color: #f8f9fa;
  --dark-color: #212529;
  --main-bg-color: #505050;
  --secondary-color: #78b7ce;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--main-bg-color);
  margin-bottom: 120px;
}

* {
  color: var(--light-color);
}

.active-nav {
  color: var(--secondary-color);
}

.about-me {
  padding-right: 20rem;
  padding-left: 20rem;
  text-align: justify;
}

